# local-proxy-lab

./: .gitignore  local-proxy-lab.sln
Report_docs/: Report-proxy-v2-formal.md  Report-proxy-v2-weekly.md
TCP_toy/: TCP_toy.vcxproj  TCP_toy.vcxproj.filters  TCPmain.c
c_basics_lab/: 1_pointer_array_basics.c  2_functions_and_const.c  3_putting_it_together.c
docs/: Basic-proxy-architecture.md  MultiThread_proxy_pseudocode.c  Report-proxy.md  Share-proxy-architecture-overview.md  ai-handoff.md  execution-plan-to-mitm.md  m2-notes.md  m3-notes.md  m4-mitm-setup.md  m4-notes.md  main_purpose.md  project-goal-and-roadmap.md  proxy_pseudocode.c  research_areas.md  scope-and-protocol-coverage.md  socket-buffer-and-string.md  step3-host-parsing-and-relay.md  week5-tls-concepts.md
docs/ToInfinity/: phase5-implementation-plan.md
docs/logs/gemini-web/: gemini-upload.md
docs/m1tom4/: m1-tradeoffs.md
docs/troubleshooting/: h2-rst-stream-bug.md
proxy_MITM_pure/: proxy_MITM_pure.cpp
proxy_NoMITM/: proxy_NoMITM.cpp
proxy_ToInfinity/: CMakeLists.txt
proxy_ToInfinity/docs/: SESSION-HANDOFF.md  SUMMARY.md  ai-upload-architecture-analysis.md  ai-upload-fingerprints.md  build-and-progress.md  cmake-guide.md  desktop-app-proxy-hooking.md  fasoo-drm-mechanism.md  mac-porting-troubleshooting.md  phase5-vs-code-tracking.md  phase5-walkthrough.md  proxy-architecture-and-pipeline-flow.md
proxy_ToInfinity/docs/logs/: ai-upload-protocols-summary.md
proxy_ToInfinity/docs/logs/antigravity/: antigravity-analysis.md
proxy_ToInfinity/docs/logs/chatgpt-app/: chatgpt-app-analysis.md
proxy_ToInfinity/docs/logs/claude-app/: claude-app-upload.md
proxy_ToInfinity/docs/logs/claude-app/raw_dumps/: 1_raw_dump.txt  2_raw_dump.txt  3_raw_dump.txt  4_raw_dump.txt  5_raw_dump.txt
proxy_ToInfinity/docs/logs/claude-web/: claude-web-upload.md
proxy_ToInfinity/docs/logs/claude-web/raw_dumps/: 1_upload_file.txt  2_convert_document.txt  3_completion.txt
proxy_ToInfinity/src/: main.cpp
proxy_ToInfinity/src/Core/: Context.h  Logger.cpp  Logger.h  Platform.h  ProxyServer.cpp  ProxyServer.h
proxy_ToInfinity/src/Crypto/: TlsManager.cpp  TlsManager.h
proxy_ToInfinity/src/Inspector/: TrafficAnalyzer.cpp  TrafficAnalyzer.h
proxy_ToInfinity/src/Protocol/: Http1Engine.cpp  Http1Engine.h  Http2Engine.cpp  Http2Engine.h
proxy_arch/: proxy_arch.cpp
proxy_beyond/: proxy_plan_A.cpp  proxy_plan_B.cpp  run_browser_test.ps1  upload_test.html
proxy_beyond_docs/: README.md  architecture-deployment-brainstorm.md  claude-upload-capture-plan-0715.md  plan-b-h2-debug-progress.md  protocol-handling-6-9.md  resume-hard-task.md  windows-run-guide.md
proxy_multithread/: proxy_multithread.cpp  proxy_multithread.vcxproj  proxy_multithread.vcxproj.filters
proxy_pure_m1/: proxy_pure_m1.cpp
proxy_pure_m2/: proxy_pure_m2.cpp
proxy_pure_m3/: proxy_pure_m3.cpp
proxy_relay/: proxy_relay.cpp  proxy_relay.vcxproj  proxy_relay.vcxproj.filters
proxy_v1/: proxy_v1.cpp
proxy_v2/: proxy_v2.cpp
proxy_v3/: proxy_v3.cpp
proxy_v4/: proxy_v4.cpp
server_client_proxy/: server_client_proxy.c  server_client_proxy.vcxproj  server_client_proxy.vcxproj.filters  server_proxy.c
